# mosze-2021

./: CMakeLists.txt  Cell.cpp  Cell.h  Dockerfile  FunctionTesting.cpp  IO_test.sh  README.md  Spreadsheet.cpp  Spreadsheet.h  census_data_scrap.ipynb  climate.ipynb  doxyconf  expected_output.txt  input.txt  input_for_barchart.txt  main.cpp  valgrind_input.txt
.github/workflows/: harmadik_feladat.yml  masodik_feladat.yml  memorycheck.yml  unittest.yml
